Extrusion doesn't take in account the current transform orientation #76504

Closed
opened 2020-05-07 12:43:54 +02:00 by Pasang Bomjan · 16 comments

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-06 23:00, hash: 05da8132d8
Worked: 2.83 Beta and below

Short description of error

  1. Rotate the default cube 45 degrees in the Z-axis.
  2. In edit-mode with the top face selected, press E and then X.

You can see the extrusion still on the normal axis. Press X again for the global axis.
This worked correctly in 2.83 and below.

**Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-06 23:00, hash: `05da8132d8` Worked: 2.83 Beta and below **Short description of error** 1. Rotate the default cube 45 degrees in the Z-axis. 2. In edit-mode with the top face selected, press E and then X. You can see the extrusion still on the normal axis. Press X again for the global axis. This worked correctly in 2.83 and below.
Author

Added subscriber: @Pasang

Added subscriber: @Pasang
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

image.png
It indicates the current action correctly. It changes to "global" on second X.

![image.png](https://archive.blender.org/developer/F8518267/image.png) It indicates the current action correctly. It changes to "global" on second X.
Author

It indicates the current action correctly. It changes to "global" on second X.

Yes @ankitm. But in the earlier versions, if the transform orientation was set to Global, then the first X after the extrude moves the extrusion in the Global X, and if it was set to Normal, then in the normal's x-axis.
In 2.9, no matter which transform orientation is used, first X moves the extrusion in the normal and the second one in the global.

>It indicates the current action correctly. It changes to "global" on second X. Yes @ankitm. But in the earlier versions, if the transform orientation was set to Global, then the first X after the extrude moves the extrusion in the Global X, and if it was set to Normal, then in the normal's x-axis. In 2.9, no matter which transform orientation is used, first X moves the extrusion in the normal and the second one in the global.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Apparently the original behavior has changed.
The operator considers that the orientation only needs to change when the axis is the same (XX, YY, or ZZ).
Analyzing the behavior in 2.79, it is different from 2.80.
In 2.79 if you press the same key as the axis in constraint, it changes from Normal to No Contraint -> Global -> Normal and repeat this.
In 2.80 it changes from Normal to Local -> No Contraint -> Global -> Local and repeat this.

I will consider the behavior of 2.79 to be correct as none of these changes seem to have been discussed.

Apparently the original behavior has changed. The operator considers that the orientation only needs to change when the axis is the same (XX, YY, or ZZ). Analyzing the behavior in 2.79, it is different from 2.80. In 2.79 if you press the same key as the axis in constraint, it changes from Normal to No Contraint -> Global -> Normal and repeat this. In 2.80 it changes from Normal to Local -> No Contraint -> Global -> Local and repeat this. I will consider the behavior of 2.79 to be correct as none of these changes seem to have been discussed.

This issue was referenced by 2f63e47931

This issue was referenced by 2f63e479313332756d0879b841527a31fa1d30b3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-05-07 21:52:56 +02:00

This issue was referenced by b026965f80

This issue was referenced by b026965f80c7e1beabbf4310af83af66c5b04e45

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

I had to revert the commit because users were not happy with the behavior of blender 2.79.

I had to revert the commit because users were not happy with the behavior of blender 2.79.

This issue was referenced by 4deea4f4c5

This issue was referenced by 4deea4f4c57aae13813b6ac67b3a4fbfad6dd1a0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'

I changed the behavior again in 289242fef9
Orientation should only change when you press the same axis successively.
So Z to X must maintain the same orientation.
If it didn't work like this before, then I believe I was wrong.

I changed the behavior again in 289242fef9 Orientation should only change when you press the **same** axis successively. So Z to X must maintain the same orientation. If it didn't work like this before, then I believe I was wrong.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76504
No description provided.