source/blender/editors/transform/transform.c
@@ -825,9 +825,13 @@ static void transform_event_xyz_constraint(TransInfo *t, short key_type, bool is
       }
     }
     else if (!edit_2d) {
-      if (ELEM(cmode, '\0', axis)) {
+      if (cmode == axis) {
         /* Successive presses on existing axis, cycle orientation modes. */
         t->orientation.index = (t->orientation.index + 1) % ARRAY_SIZE(t->orientation.types);
+        initTransformOrientation(t->context, t, t->orientation.types[t->orientation.index]);
+      }
+      else if (t->orientation.index != 1) {
+        t->orientation.index = 1;
         initTransformOrientation(t->context, t, t->orientation.types[t->orientation.index]);
       }
 
